Layout fixes
Fixed unnnecessary horizontal scroll on homepage in mobile.
Added iPhone X specific padding to take into account notch in
landscape.

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -32,7 +32,7 @@ header {
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100vh;
+  height: 100%;
   padding-top: 50px;
   @media screen and (max-width: 375px) {
     padding-top: 30px;
